# hackxplore2026-webapp

./: .env.example  .gitignore  CLAUDE.md  Description of the Challenge.md  Makefile  Project file.md  README.md  SPEC.md  THOUGHTS.md  index.html  netlify.toml  package-lock.json  package.json  pyproject.toml  render.yaml  vercel.json
.github/workflows/: deploy.yml
app/: __init__.py  auth.py  calibration.py  config.py  cron.py  db.py  lorawan.py  main.py  mapping.py  models.py  schemas.py
app/routers/: absences.py  ingest.py  me.py  partnerships.py  predictions.py  stats.py  trees.py  weather.py
app/seed/: __init__.py  __main__.py  common.py  demo.py  funny_names.py  partnerships.py  readings.py  sensors.py  species.py  team_demo.py  tree_enrichment.py  trees.py  users.py
app/services/: ingestion.py  scoring.py  (+1 more)
docs/: 00-vision-and-value.md  01-architecture.md  02-data-model.md  03-api-contract.md  04-sensor-and-lorawan.md  05-scoring-and-gamification.md  06-seeding-and-mock-data.md  07-implementation-plan.md  08-frontend-data-mapping.md  09-webapp-data-audit.md  APPLICATION-GUIDE.md  PARTNERSHIP-NETWORK-GUIDE.md  TEAM-ONBOARDING.md  e2e-validation-plan.md
hackxplore2026-webapp/: .env.example  .gitignore  README.md  index.html  package-lock.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
scripts/: e2e_validate.py  fake_water.py  make_thirsty.py  mock_stream.py
src/: index.css
tests/: conftest.py  test_api_integration.py  test_calibration.py  test_e2e_spine.py  test_funny_names.py  test_lorawan.py  test_mapping.py  test_scoring.py
(+62 files in other folders)
